--- a/q/274924.html
+++ b/q/274924.html
@@ -38,7 +38,24 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>l3Ḟ3*©Ḥạ+⁺_®)»ċ
 </code></pre>
+<p>A monadic Link that accepts a non-negative integer, <span class="math-container">\$N\$</span>, and yields the value of <span class="math-container">\$f(n)\$</span>.</p>
 <p><strong><a href="https://tio.run/##ASkA1v9qZWxsef//bDPhuJ4zKsKp4bik4bqhK@KBul/CrinCu8SL////MTMzNw" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/z/H@OGOecZah1Y@3LHk4a6F2o8ad8UfWqd5aPeR7v@H2x81rfn/P9pAR8FQR8EIiMyA2FxHwdQYiE2AosbG5rEA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
+<h4>How?</h4>
+<p>Outputs the number of terms less than or equal to <span class="math-container">\$N\$</span> in the unique monotonic sequence, <span class="math-container">\$a\$</span>, such that <span class="math-container">\$a(a(n)) = 3n\$</span>.</p>
+<pre><code>l3Ḟ3*©Ḥạ+⁺_®)»ċ - Link: non-negative integer, N
+            )   - for each {I in [1..N] ([] if N==0)}:
+l3              -   log base three of {I}
+  Ḟ             -   floor {that}
+   3*           -   three exponentiate {that}
+     ©          -   (and copy this to the register)
+      Ḥ         -   double {that}
+       ạ        -   {that} absolute difference {I}
+         ⁺      -   do this twice:
+        +       -     add {I}
+          _®    -   subtract the value stored in the register
+             »  - maximum with {N} (vectorises)
+              ċ - count occurrences of {N}
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>APL+WIN, 57 bytes</h1>
 <pre><code>⍎∊((n←⎕)=0)↑⊂'n⋄→'⋄3⊥(-i)↓((1+i←2|↑n),1↓n←((⌊1+3⍟n)⍴3)⊤n)
