--- a/q/274924.html
+++ b/q/274924.html
@@ -26,22 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
-<tr d-ix="1"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
-<tr d-ix="2"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
-<tr d-ix="3"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
-<tr d-ix="4"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
-<tr d-ix="5"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
-<tr d-ix="6"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
-<tr d-ix="7"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
+<tr d-ix="0"><td>041</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
+<tr d-ix="1"><td>013</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
+<tr d-ix="2"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
+<tr d-ix="3"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
+<tr d-ix="4"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
+<tr d-ix="5"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="6"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
+<tr d-ix="7"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
+<tr d-ix="8"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 41 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>`?`=\(n)`if`(n&lt;2,0,(?n-1)+!n%/%3-?1+?n-1)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3NRPsE2xjNPI0EzLTEjTybIx0DHQ07PN0DTW1FfNU9VWNde0NtcF8qIaqNA0DTWUFXTsFA640DUME0wjCNOTiykksKMip1DC0MjTTSdPk4lIGSppBZc3BPHMozwLEMzWG8IzMwDwTKA-s0tDYGKrWzMIC4oIFCyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/274930/55372">@l4m2's JS answer</a>.</p>
+<p>Slightly ungolfed:</p>
+<pre class="lang-r prettyprint-override"><code>f=\(n)`if`(n&lt;2,0,f(n-1)+(n%/%3==f(1+f(n-1))))
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>æḟ©3Ḥạ+⁺_®)»ċ
 </code></pre>
 <p>A monadic Link that accepts a non-negative integer, <span class="math-container">\$N\$</span>, and yields the value of <span class="math-container">\$f(n)\$</span>.</p>
 <p><strong><a href="https://tio.run/##ASgA1/9qZWxsef//w6bhuJ/CqTPhuKThuqEr4oG6X8KuKcK7xIv///8xMzM3" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8///wsoc75h9aafxwx5KHuxZqP2rcFX9oneah3Ue6/x9uf9S05v//aAMdBUMdBSMgMgNicx0FU2MgNgGKGhubxwIA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
 <h4>How?</h4>
-<p>Outputs the number of terms less than or equal to <span class="math-container">\$N\$</span> in the unique monotonic sequence, <span class="math-container">\$a\$</span>, such that <span class="math-container">\$a(a(n)) = 3n\$</span>.</p>
+<p>Outputs the number of terms less than or equal to <span class="math-container">\$N\$</span> in another sequence - the unique, strictly increasing sequence of non-negative integers, <span class="math-container">\$a\$</span>, such that <span class="math-container">\$a(a(n)) = 3n\$</span>. This is <a href="https://oeis.org/A003605" rel="nofollow noreferrer" title="OEIS">A003605</a>, which gives the indices at which an increase occurs in <span class="math-container">\$f\$</span>.</p>
 <pre><code>æḟ©3Ḥạ+⁺_®)»ċ - Link: non-negative integer, N
           )   - for each {I in [1..N] ([] if N==0)}:
 æḟ 3          -   floor to the nearest power of three
@@ -55,12 +65,12 @@
             ċ - count occurrences of {N}
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>APL+WIN, 57 bytes</h1>
+<div id="pu2" class="pu"><h1>APL+WIN, 57 bytes</h1>
 <pre><code>⍎∊((n←⎕)=0)↑⊂'n⋄→'⋄3⊥(-i)↓((1+i←2|↑n),1↓n←((⌊1+3⍟n)⍴3)⊤n)
 </code></pre>
 <p><a href="https://tio.run/##FU1LCsIwFNznIn2hFppG7coDCIpnKJVKIUShK8GVSC3RFj@4dqM38ERzkfiymHnDfHjFziTrfWG2m6Q0RdPUpcfwWi7Q3rRgNV@xUgLdufLoB3SOyLLFkZylEu0d7hhZXE5oHxEfDfelpObkSaTimrvZgWtWjhR7YUuEq1OxRv@2Ev1PS7iPlZ6fCF@JVFRCMbKAaaCcaaIDjUOmdf4H" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
 <pre><code>gniomh(n){s:=1nuair-a s*3&lt;=n s*=3toradh(n|0&amp;n/s&lt;2&amp;(n+s)//3)|n-s}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICImoeWCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
@@ -74,7 +84,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
 <p>Incredibly slow for non-low <code>n</code>, thanks to generating exponentially more terms than needed. For testing purposes, you can get around that by adding <code>if len(a)&gt;n:break</code> to the for loop.</p>
 <pre class="lang-python prettyprint-override"><code>def f(n,s=1,r=range):
  a=[0,0]
@@ -108,7 +118,7 @@
     return arr[n]
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
 </code></pre>
@@ -121,7 +131,7 @@
 <p><a href="https://tio.run/##LcqxCoAgFAXQub7C8T0qRCQIwf7FMEuoq4hLX28NbWc4@alngl5yaS3Yy92bdwIGq3LwBCm1tYHUEAiTYuYfLaQiICJEcTh2UjObvsslohLG7zC3Fw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Recursive magic based on the original definition, copied from <a href="https://codegolf.stackexchange.com/a/274930/20260">l4m2's JS answer</a>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&lt;2?0:!(n/3^f(1+f(--n)))+f(n)
 </code></pre>
@@ -134,13 +144,13 @@
 <p><a href="https://tio.run/##JYpBDsIgEEX3noJlp7SFys4yegIPQdqiGDJjaGNceHeEdPXe/3kv93HbnMJ774mXNWePDXUBR8Ar2XCjPijz0xey57YsZeSxfa1aA9lzEk1YvqgnUWBHXUTKonCamTaO6xD5UZNO@AqoPAwEori7/Tn4yJzqpwxA/gM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Fast, not sure relation between Arnauld's solution</p>
 </div>
-<div id="pu6" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
+<div id="pu7" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,k=1)=&gt;n&lt;k*3?n/k^1?n&amp;&amp;n-k:(n+k)/3|0:f(n,k*3)
 </code></pre>
 <p><a href="https://tio.run/##dcxLCsIwFEDRuavIqCS1NZ9n01CM3YlQaiOa8iJWHLn3iDQjg@NzubfhNSzj43p/1hjOU4zOUqy8lcwe8eBL6JH7k@yxKLD2HcWtZxzeonPfrAQWx4BLmKfdHC7UUUKIYIxwTsQmE/lX1CoyE6WTtDm1iUxGDaykdE77RL9DCZCG2pj4AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
 <pre><code>[3τḣ$⌐⇧~p$ċßṪ3β
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJ+IiwiIiwiWzPPhOG4oyTijJDih6d+cCTEi8Of4bmqM86yIiwiIiwiMCAtPiAwXG4xIC0+IDBcbjIgLT4gMVxuMjYgLT4gMTdcbjI3IC0+IDE4XG41MyAtPiAyNlxuNTQgLT4gMjdcbjEzMzcgLT4gNjg4Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
