--- a/q/242459.html
+++ b/q/242459.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>033</td><td>Haskell</td><td>240812T132244Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/274918#274918">xnor</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Pyth</td><td>240812T080043Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/274910#274910">int 21h </a></td></tr>
+<tr d-ix="0"><td>011</td><td>Pyth</td><td>240812T080043Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/274910#274910">int 21h </a></td></tr>
+<tr d-ix="1"><td>033</td><td>Haskell</td><td>240812T132244Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/274918#274918">xnor</a></td></tr>
 <tr d-ix="2"><td>006</td><td>Thunno 2</td><td>230818T105356Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/264338#264338">The Thon</a></td></tr>
 <tr d-ix="3"><td>047</td><td>Desmos</td><td>220503T031934Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/246833#246833">fireflam</a></td></tr>
 <tr d-ix="4"><td>037</td><td>Regex ECMAScript or better</td><td>220210T055934Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/242646#242646">Deadcode</a></td></tr>
@@ -63,17 +63,10 @@
 <tr d-ix="34"><td>015</td><td>Wolfram Language Mathematica</td><td>220207T084527Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/242462#242462">alephalp</a></td></tr>
 <tr d-ix="35"><td>007</td><td>Brachylog</td><td>220207T084213Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/242460#242460">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 33 bytes</h1>
-
-<pre class="lang-hs prettyprint-override"><code>f n=and[gcd(k^2)n/=k|k&lt;-[3,7..n]]
-</code></pre>
-<p><a href="https://tio.run/##y0gszk7Nyfn/P00hzzYxLyU6PTlFIzvOSDNP3za7JttGN9pYx1xPLy829n9uYmaegq1CQVFmXomCikJaZk5JapFCGpAZbaCnZ2hgEPsfAA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
-<p>Checks that all <span class="math-container">\$k\$</span> that are <span class="math-container">\$3 \bmod 4\$</span> have <span class="math-container">\$\gcd(k^2,n)\neq k\$</span>. This comes from the characterization of sums of two squares as numbers whose prime factorization doesn't have any <span class="math-container">\$3 \bmod 4\$</span> prime raised to an odd power. If such a <span class="math-container">\$p^a\$</span> appears in the factorization, then <span class="math-container">\$p^a \ \equiv 3 \bmod 4\$</span>, and <span class="math-container">\$k=p^a\$</span> will fail the condition.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, <s>12</s> 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, <s>12</s> 11 bytes</h1>
 <pre><code>}Q+M^^R2hQ2
 </code></pre>
-<p><a href="https://tio.run/##K6gsyfj/vzZQ2zcuLsgoI9Do/38A" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K6gsyfj/vzZQ2zcuLsgoI9Do/39TAA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
 <p><a href="https://tio.run/##K6gsyfj/36c2qdg3Li7IKDQjyeh/pW@0gYKhgpGCsYKJgqmCmYK5giGQa/AfAA" rel="nofollow noreferrer" title="Pyth – Try It Online">Test cases</a></p>
 <p>I have a feeling that pyth can do better. 11 Bytes, you know, it's in comparison to other golfing languages a lot.</p>
 <p>The algorithm is not different from the published answers and, consequently, the performance is not sufficient to calculate the two largest test values in less than 60 sec.</p>
@@ -84,6 +77,14 @@
      ^R2     # of squared
         hQ   # range of 0..Q
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 33 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>f n=and[gcd(k^2)n/=k|k&lt;-[3,7..n]]
+</code></pre>
+<p><a href="https://tio.run/##y0gszk7Nyfn/P00hzzYxLyU6PTlFIzvOSDNP3za7JttGN9pYx1xPLy829n9uYmaegq1CQVFmXomCikJaZk5JapFCGpAZbaCnZ2hgEPsfAA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p>Checks that all <span class="math-container">\$k\$</span> that are <span class="math-container">\$3 \bmod 4\$</span> have <span class="math-container">\$\gcd(k^2,n)\neq k\$</span>. This comes from the characterization of sums of two squares as numbers whose prime factorization doesn't have any <span class="math-container">\$3 \bmod 4\$</span> prime raised to an odd power. If such a <span class="math-container">\$p^a\$</span> appears in the factorization, then <span class="math-container">\$p^a \ \equiv 3 \bmod 4\$</span>, and <span class="math-container">\$k=p^a\$</span> will fail the condition.</p>
+<p>Outputting <code>True/False</code> reversed could save a byte by using <code>or</code> rather than <code>and</code>.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 6 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ė2Ṛ²ʂƇ
