--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240812T192139Z
+"   /golfscore                                      20240812T195454Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274938.html">Sums of X*Y chunks of the nonnegative integers  : 0274938</a>
 <a href="q/242459.html">Sum of two squares                              : 0242459</a>
 <a href="q/274924.html">Shift right by half a trit                      : 0274924</a>
 <a href="q/607.html">Find the Factorial!                             : 0000607</a>
