--- a/q/274938.html
+++ b/q/274938.html
@@ -26,28 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>048</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
-<tr d-ix="1"><td>064</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
+<tr d-ix="0"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
+<tr d-ix="1"><td>048</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 48 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>(x,y,w,n)=&gt;(g=i=&gt;i&amp;&amp;(i/w/x/y^n/w|i/x%w^n%w?0:i)+g(i-1))(x*w*~y*~n)
+</code></pre>
+<p><a href="https://tio.run/##dchBDoIwEADAu/@A7NZiQfCiKf6EhCCQNWRrxLhtYvh69QE2c5t7/@7X4UmPV8HuNsbJRvA6aNGMtoXZkm0pz4GMGG9Cx0Y@ZHwmHWdyLc@E@xmoqBDBK1FbUBtjvOwGx6tbxsPiZpig1s1Pifj3q8QfE18nvkn8CTF@AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Input <code>W ÷ X</code></p>
+<p>Silly.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 48 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;((n/y|0)*y*w+n%y*x+(~-y*w+~-x)/2)*x*y
 </code></pre>
 <p><a href="https://tio.run/##FcdJCoAwDADA1whJTN3xVv8ibiiSioo2IH694txmaa/26PZ5O424fgijDSDsWflG2wBIqk@GpHTHEin5GF7z5zUe0wLJk4bOyeHWIVndBCPUXHLFeYEYPg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Simple numeric formula. Explanation coming soon™</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 64 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>(x,y,w,n)=&gt;(g=i=&gt;i&amp;&amp;(i/w/x/y^n/w|i/x%w^n%w?0:i)+g(i-1))(x*w*y*n)
-</code></pre>
-<p><a href="https://tio.run/##dchBDoIwEADAu/@A7NZiQfCiKf6EhCA0a8jWiHHbxL9XH2Azt7mP73GbnvR4Vexvc1psgqCjFs1oe3CWbE9lCWTEBBMHNvIhEwoZuJBrfSbcO6CqQYSgREXFmC67yfPm1/mwegcLtLr7qRH/fpP5Y@bbzHeZPyGmLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Input <code>W ÷ X</code></p>
-<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>(x,y,w,n)=&gt;(g=i=&gt;i&amp;&amp;(i/w/y^n*x/w|i%w/x^n%(w/x)?0:i)+g(i-1))(w*y*n)
-</code></pre>
-<p><a href="https://tio.run/##dclBDoIwEADAu/@A7NbFUsCLpvgTEoLQrCEtEWPbxL9XH2BPc5jH@B736cnbq7LuPqdFJwgUyZNF3YPRrHsuS2DpZRysCNJ/uPAyDLaAH3irL4xHA1wpRPAiCovpepic3d06n1ZnYIGWOlIN1Yj/Q@WiyUWbiy4XZ8T0BQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Silly.</p>
 </div>
 
 <table id="st">
