--- a/q/274938.html
+++ b/q/274938.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>046</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
+<tr d-ix="0"><td>043</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
 <tr d-ix="1"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 46 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;((n-=r=n%y)*w+r*x+(y*w+x+~w)/2)*x*y
+<pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;(n*w+n%y*(x-w)+(y*w+x+~w)/2)*x*y
 </code></pre>
-<p><a href="https://tio.run/##DcZLCoAgEADQ0wQzOhV9aGd3kbIoZAyN1E1Xt97qnfrRYfHHddfsVlM2VYApUaaIagbgWnnFVUYRpRdJQv6T5Bux7VEkkcviODhrGut22GCigUbqesTyAQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> -2 thanks to Arnauld.</p>
+<p><a href="https://tio.run/##DcdLCoAgEADQ0wQzOhV9aGd3EbMoZIyM1E1Xt97uHfrRwVz7edfsF1tWVYApUaaIagYWUXKVBaQ6ooT8N8k3YtujSCIX4zl4ZxvnN1hhooFG6nrE8gE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> -2 thanks to Arnauld</p>
 <p>Simple numeric formula. They say a picture speaks a thousand words:</p>
 <p><a href="https://i.sstatic.net/FU1H1rVo.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/FU1H1rVo.png" alt="enter image description here" /></a></p>
 </div>
