--- a/q/274938.html
+++ b/q/274938.html
@@ -26,10 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
-<tr d-ix="1"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
+<tr d-ix="0"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
+<tr d-ix="1"><td>043</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
+<tr d-ix="2"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<pre><code>Þ∞‹ẇẇṠfẇṠ
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLDnuKInuKAueG6h+G6h+G5oGbhuofhuaAiLCIiLCIxMlxuNFxuMyJd" rel="nofollow noreferrer">Try it Online!</a> Outputs an infinite list given w,y,x.</p>
+<pre><code>Þ∞‹       # 0...infinity
+   ẇ      # Cut into chunks of length w
+    ẇṠ    # Sum groups of length y
+      fẇṠ # Flatten, and sum groups of length x
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;(n*w+n%y*(x-w)+(y*w+x+~w)/2)*x*y
 </code></pre>
@@ -37,7 +48,7 @@
 <p>Simple numeric formula. They say a picture speaks a thousand words:</p>
 <p><a href="https://i.sstatic.net/FU1H1rVo.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/FU1H1rVo.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(x,y,w,n)=&gt;(g=i=&gt;i&amp;&amp;(i/w/x/y^n/w|i/x%w^n%w?0:i)+g(i-1))(x*w*~y*~n)
 </code></pre>
