--- a/q/274938.html
+++ b/q/274938.html
@@ -32,8 +32,8 @@
 <tr d-ix="3"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>Python, <s>58</s> 54 bytes</h1>
-<p>Here <code>w</code> means the number of x-wide chunks in a row.</p>
-<p>This gives the sum of the n-th block (starting from 0)</p>
+<p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
+<p>This gives the sum of the <code>n</code>-th block (<code>n</code> starting from 0)</p>
 <pre><code>lambda x,y,w,n:x*y*((n//w*w*y+n%w)*x*2+x-1+w*x*~-y)//2
 </code></pre>
 </div>
