--- a/q/196824.html
+++ b/q/196824.html
@@ -47,12 +47,56 @@
 <tr d-ix="18"><td>1220</td><td>Wren</td><td>191210T092751Z</td><td><a href="https://codegolf.stackexchange.com/questions/196824/biggest-irreducible-hello-world/196836#196836">user8505</a></td></tr>
 <tr d-ix="19"><td>nan</td><td>JavaScript</td><td>191210T050936Z</td><td><a href="https://codegolf.stackexchange.com/questions/196824/biggest-irreducible-hello-world/196829#196829">Mason</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 27612545718 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, approx 10^225 bytes</h1>
+<pre><code>
+n=0n
+n++
+n++
+...
+n++
+n++
+q={u:'S',v:'C',w:'(',x:')',y:',',z:'.'}
+eval(eval(((n+'').split('111').map(k=>((+k).toString(36).slice(1))).join('')+'x').replace(/./g,k=>k in q?q[k]:k)))
+
+</code></pre>
+<p>where ... is replaced by the following number of copies of n++ :</p>
+<pre><code>678692576119362011159792875383042321114598254661340852111711210
+938235112911136813938809555781113758419382880132111405707156469
+788611171120223110201051113681393941421682111396916280613928611
+137609270347781801113752319860875441
+</code></pre>
+<p>How did I get that number:</p>
+<ol>
+<li><p>Take the string console.log(&quot;Hello, World!&quot;)</p>
+</li>
+<li><p>find the character codes, so I can transform it into an expression that looks like: String.fromCharCode(...)</p>
+</li>
+<li><p>Replace characters in that string according to a map, which results in all lowercase and numbers.</p>
+</li>
+<li><p>Split the string into lengths of 10 chars and add 1 and the beginning of each one (there are 121 chars, so this leaves 1 x at the end).</p>
+</li>
+<li><p>Translate each string from base 36 to decimal.</p>
+</li>
+<li><p>Join the strings with '111'.</p>
+</li>
+</ol>
+<p>The following is a modified version of the code which you can try online:</p>
+
+<pre class="lang-javascript prettyprint-override"><code>n= BigInt('678692576119362011159792875383042321114598254661340852111711210938235112911136813938809555781113758419382880132111405707156469788611171120223110201051113681393941421682111396916280613928611137609270347781801113752319860875441');
+
+q={u:'S',v:'C',w:'(',x:')',y:',',z:'.'}
+eval(eval(((n+'').split('111').map(k=&gt;((+k).toString(36).slice(1))).join('')+'x').replace(/./g,k=&gt;k in q?q[k]:k)))
+
+</code></pre>
+<p><a href="https://tio.run/##RZDNTsMwEITveYre1lFD6vXPeh1UkODEuUfEISpRlSakaRtKAfHsYdMicbHs8cy3Y2/LU3lcH@p@uOl2r9U4dsvZQ7156gYFFJii8YEQoyWjEdHHEA0Hb9lqZ6wRyfnIxjsitE6zn6SAaFBHy8Z62UaRLDFaUVhH733gSQqeHU4uUfHK0j7ogJ4cxcBMfyxtjEXU0kD7f1Z06AwST0EbKSIZ1tJCCtIFTzqaoK0LMo71daKAIpOWJziHkN4myX75/V7ACrJTAY@QfRSgIDsXkEL2WUAG2VcBOfwk1als1WVRqpsDpPmxb2v5JgHL4a3sVbO8U2repPmwWw2HutsoS2Jr63WlME3TfLurOyXROZwlcqj6tpSrRb7YZJJtZnU329/vn5uXohF7Mo6/" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h2>Previous Answer:</h2>
+<p>27612545718 bytes</p>
 
 <pre class="lang-javascript prettyprint-override"><code>eval("[...]".length.toString(36)+".log('Hello, World!')")
 </code></pre>
 <p>How it works:</p>
 <p>The first string inside the eval statement is 27612545666 chars long. This number is the decimal representation of &quot;console&quot; in base 36.</p>
+<hr />
 </div>
 <div id="pu1" class="pu"><h1>BrainF***, 2992 bytes</h1>
 <pre><code>-{184}.-{227}.-{249}&gt;+{254}[+&lt;.&gt;]&lt;-{253}.+{189}.+{244}.-{201}.-{232}.-{253}.+{250}.+{248}.+{189}.
