--- a/q/274938.html
+++ b/q/274938.html
@@ -26,24 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>054</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
-<tr d-ix="1"><td>048</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
+<tr d-ix="0"><td>046</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
+<tr d-ix="1"><td>054</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
 <tr d-ix="2"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
 <tr d-ix="3"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python, <s>58</s> 54 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s>48</s> <s>47</s> <s>46</s> <s>43</s> <s>42</s> <s>48</s> 46 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*((y*w+x+~w)/2-(n*=x)%w*~-y+n*y)
+</code></pre>
+<p><a href="https://tio.run/##DcRLCsIwEADQ0wjzi/WDC9F4l1IbiZQZacVkNr166lu8d//rl2HOn29Qe44txQYqVVwKxkclJwCnwpXXgt0pgFKsuCu0Bmclx5ZshhwPt3w//mPGwXSxadxP9oIEWc5ykSti2wA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> -3ish thanks to Arnauld, hopefully now actually works. There might be a shorter version taking w/x instead.</p>
+<p>Simple numeric formula. They say a picture speaks a thousand words:</p>
+<p><a href="https://i.sstatic.net/53cUFrDH.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/53cUFrDH.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1>Python, <s>58</s> 54 bytes</h1>
 <p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
 <p>This gives the sum of the <code>n</code>-th block (<code>n</code> starting from 0)</p>
 <pre><code>lambda x,y,w,n:x*y*((n//w*w*y+n%w)*x*2+x-1+w*x*~-y)//2
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 48 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*((n*=x)%w+(n-n%w)*y+(y*w+x+~w)/2)
-</code></pre>
-<p><a href="https://tio.run/##DcRLDoIwEADQ05DMD0SNC6P1LgSoqSEzBozTbrh69S3ea/gO27im96dVm@YaQwWVLEUcwyNTIQClkLFxBm21caTCUMg58@54OGGNtkIK/S3dj/@YcTTdbJm7xZ4QIclZLnJFrD8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> -3ish thanks to Arnauld, hopefully now actually works. There might be a shorter version taking w/x instead.</p>
-<p>Simple numeric formula. They say a picture speaks a thousand words:</p>
-<p><a href="https://i.sstatic.net/53cUFrDH.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/53cUFrDH.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>Þ∞‹ẇẇṠfẇṠ
