--- a/q/274938.html
+++ b/q/274938.html
@@ -26,24 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
-<tr d-ix="1"><td>046</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
+<tr d-ix="0"><td>045</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
+<tr d-ix="1"><td>038</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
 <tr d-ix="2"><td>054</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
 <tr d-ix="3"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
 <tr d-ix="4"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 38 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 45 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*((y*w+x+~w)/2-n*x%w*~-y+n*x*y)
+</code></pre>
+<p><a href="https://tio.run/##DcZLDoIwEADQ05DMr4oaFwTrXQhSU0M6BoztbLh6YfPyPsN/WMclfn8u6WuqwVdIUsQko38WMgIwylx4y3i@ukSlybQ542NkWIMuEH3bx8flgBlHTavO02nWNwSIcpO7dIh1Bw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> -3ish thanks to Arnauld, -1 thanks to xnor, hopefully now actually works. There might be a shorter version taking w/x instead.</p>
+<p>Simple numeric formula. They say a picture speaks a thousand words:</p>
+<p><a href="https://i.sstatic.net/53cUFrDH.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/53cUFrDH.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 38 bytes</h1>
 <pre><code>ＮθＮηＮζＮεＩ÷××θη⁺××ζθ⁺⊖η⊗×÷εζη⁺⊖θ⊗×﹪εζθ²
 </code></pre>
 <p><a href="https://tio.run/##bYw7DsIwEER7TrGlLZkG8SlS4iZFUAou4CQrxZI/2LFT5PLGUYiAwBajfaOZaXvhWytUSqV5xHCLukFPHC12n9xveNowZq69NIFcxRBIaQKXo@yQ3KXG4aWOQU8Z1CoOX/7EwK0@x9ajRhOwI3OY29io/C/J9y4ymOi8l@9P1f1UK9tFZdeeo0vxkLVI6QgnOMMl7Uclng" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>X, Y, W/X, n</code> as inputs. Explanation: Looks like I've found the same closed formula. Really, verbose mode says it all, except of course the variables have to be called <code>q, h, z, and e</code> instead, just in case you want to save 8 bytes by requiring input in JSON format.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s>48</s> <s>47</s> <s>46</s> <s>43</s> <s>42</s> <s>48</s> 46 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>(n,x,y,w)=&gt;x*y*((y*w+x+~w)/2-(n*=x)%w*~-y+n*y)
-</code></pre>
-<p><a href="https://tio.run/##DcRLCsIwEADQ0wjzi/WDC9F4l1IbiZQZacVkNr166lu8d//rl2HOn29Qe44txQYqVVwKxkclJwCnwpXXgt0pgFKsuCu0Bmclx5ZshhwPt3w//mPGwXSxadxP9oIEWc5ykSti2wA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> -3ish thanks to Arnauld, hopefully now actually works. There might be a shorter version taking w/x instead.</p>
-<p>Simple numeric formula. They say a picture speaks a thousand words:</p>
-<p><a href="https://i.sstatic.net/53cUFrDH.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/53cUFrDH.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu2" class="pu"><h1>Python, <s>58</s> 54 bytes</h1>
 <p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
