--- a/q/274938.html
+++ b/q/274938.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>053</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
+<tr d-ix="0"><td>051</td><td>Python</td><td>240812T234108Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274945#274945">Lucenapo</a></td></tr>
 <tr d-ix="1"><td>045</td><td>JavaScript Node.js</td><td>240812T195454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274940#274940">emanresu</a></td></tr>
 <tr d-ix="2"><td>038</td><td>Charcoal</td><td>240813T002546Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274948#274948">Neil</a></td></tr>
 <tr d-ix="3"><td>009</td><td>Vyxal</td><td>240812T231156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274944#274944">emanresu</a></td></tr>
 <tr d-ix="4"><td>066</td><td>JavaScript Node.js</td><td>240812T195248Z</td><td><a href="https://codegolf.stackexchange.com/questions/274938/sums-of-xy-chunks-of-the-nonnegative-integers/274939#274939">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python, <s>58</s> <s>54</s> 53 bytes</h1>
+<div id="pu0" class="pu"><h1>Python, <s>58</s> <s>54</s> <s>53</s> 51 bytes</h1>
 <p>Here <code>w</code> means the number of <code>x</code>-wide chunks in a row.</p>
 <p>This gives the sum of the <code>n</code>-th block (<code>n</code> starting from 0)</p>
-<pre><code>lambda x,y,w,n:x*y*(x*((n*y-n%w*~-y)*2+w*~-y+1)-1)//2
+<pre><code>lambda x,y,w,n:x*y*(x*(n*y*2-(n%w*2-w)*~-y+1)-1)//2
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s>48</s> <s>47</s> <s>46</s> <s>43</s> <s>42</s> <s>48</s> <s>46</s> 45 bytes</h1>
