--- a/q/274924.html
+++ b/q/274924.html
@@ -26,19 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>Retina 0.8.2</td><td>240812T223756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274943#274943">Neil</a></td></tr>
-<tr d-ix="1"><td>016</td><td>Charcoal</td><td>240812T214353Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274941#274941">Neil</a></td></tr>
-<tr d-ix="2"><td>041</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
-<tr d-ix="3"><td>013</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
-<tr d-ix="4"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
-<tr d-ix="5"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
-<tr d-ix="6"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
-<tr d-ix="7"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
-<tr d-ix="8"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
-<tr d-ix="9"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
-<tr d-ix="10"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
+<tr d-ix="0"><td>011</td><td>Nekomata + 1</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
+<tr d-ix="1"><td>049</td><td>Retina 0.8.2</td><td>240812T223756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274943#274943">Neil</a></td></tr>
+<tr d-ix="2"><td>016</td><td>Charcoal</td><td>240812T214353Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274941#274941">Neil</a></td></tr>
+<tr d-ix="3"><td>041</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
+<tr d-ix="4"><td>013</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
+<tr d-ix="5"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
+<tr d-ix="6"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
+<tr d-ix="7"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
+<tr d-ix="8"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="9"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
+<tr d-ix="10"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
+<tr d-ix="11"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 49 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 11 bytes</h1>
+<pre><code>3D3UXᶜi3bᵖ≥
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6FhuNXYxDIx5um5NpnPRw67RHnUuXFCclF0NlF2wz4DLkMuIyMuMyMucyNeYyNeEyNDY2h8gCAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>3D3UXᶜi3bᵖ≥
+3D              Convert to base 3
+  3UX           Bitwise xor with [3]
+                    If the input is 0, the digits are [], so this is [3]
+                    For other inputs, this simply bitxor the first digit with 3
+     ᶜi         Optionally drop the last digit
+       3b       Convert from base 3
+         ᵖ≥     Check that the result &lt;= the input
+</code></pre>
+<p><code>-1</code> prints the first valid solution.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 49 bytes</h1>
 <pre><code>.+
 $*#
 #
@@ -64,7 +80,7 @@ $1$.2
 </code></pre>
 <p>Count those starting with <code>2</code> or ending in <code>0</code> (but taking care not to count <code>0</code> itself or to double-count numbers that both start with <code>2</code> and and in <code>0</code>).</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
 <pre><code>ＩＬΦＥＮ↨⊕ι³¬∧⌕ι²⊟ι
 </code></pre>
 <p><a href="https://tio.run/##JYvBCoNADER/xWMEe2j34MGTLRQKKv5Cuoa6sGaXNfr7MdA5PJjHjF@x@IRRdS6BBV64CwzEP1nhHaJQgREzfDgfMh3b13rdVE/cyZwvtBELLRBMutowJYGeF/saQlM9zM0p2@CfTvXuXKu3M14" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Uses @JonathanAllan's observation that <code>f(a)</code> is the number of members of <code>A003605</code> between <code>1</code> and <code>a</code> inclusive.</p>
@@ -87,7 +103,7 @@ $1$.2
                     Implicitly print
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 41 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 41 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>`?`=\(n)`if`(n&lt;2,0,(?n-1)+!n%/%3-?1+?n-1)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3NRPsE2xjNPI0EzLTEjTybIx0DHQ07PN0DTW1FfNU9VWNde0NtcF8qIaqNA0DTWUFXTsFA640DUME0wjCNOTiykksKMip1DC0MjTTSdPk4lIGSppBZc3BPHMozwLEMzWG8IzMwDwTKA-s0tDYGKrWzMIC4oIFCyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -96,7 +112,7 @@ $1$.2
 <pre class="lang-r prettyprint-override"><code>f=\(n)`if`(n&lt;2,0,f(n-1)+(n%/%3==f(1+f(n-1))))
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>æḟ©3Ḥạ+⁺_®)»ċ
 </code></pre>
 <p>A monadic Link that accepts a non-negative integer, <span class="math-container">\$N\$</span>, and yields the value of <span class="math-container">\$f(n)\$</span>.</p>
@@ -116,12 +132,12 @@ $1$.2
             ċ - count occurrences of {N}
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>APL+WIN, 57 bytes</h1>
+<div id="pu5" class="pu"><h1>APL+WIN, 57 bytes</h1>
 <pre><code>⍎∊((n←⎕)=0)↑⊂'n⋄→'⋄3⊥(-i)↓((1+i←2|↑n),1↓n←((⌊1+3⍟n)⍴3)⊤n)
 </code></pre>
 <p><a href="https://tio.run/##FU1LCsIwFNznIn2hFppG7coDCIpnKJVKIUShK8GVSC3RFj@4dqM38ERzkfiymHnDfHjFziTrfWG2m6Q0RdPUpcfwWi7Q3rRgNV@xUgLdufLoB3SOyLLFkZylEu0d7hhZXE5oHxEfDfelpObkSaTimrvZgWtWjhR7YUuEq1OxRv@2Ev1PS7iPlZ6fCF@JVFRCMbKAaaCcaaIDjUOmdf4H" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
 <pre><code>gniomh(n){s:=1nuair-a s*3&lt;=n s*=3toradh(n|0&amp;n/s&lt;2&amp;(n+s)//3)|n-s}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICImoeWCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
@@ -135,7 +151,7 @@ $1$.2
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
 <p>Incredibly slow for non-low <code>n</code>, thanks to generating exponentially more terms than needed. For testing purposes, you can get around that by adding <code>if len(a)&gt;n:break</code> to the for loop.</p>
 <pre class="lang-python prettyprint-override"><code>def f(n,s=1,r=range):
  a=[0,0]
@@ -169,20 +185,20 @@ $1$.2
     return arr[n]
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
 </code></pre>
-<p><a href="https://tio.run/##DcxBCsIwEEbhtZ5ilo1OiclYWwr1IiWLmBIs6J8QuvH0McvHgy//jneCTLnUGpeP/742T@CwmBnPQB4bxa71RVQq6407XIPSWhh9cCu0Dq7GVAi0g9o3bNk@2I48CA93NiKjm8@nXHYcDWqYUvUP" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##DcxBCsIwEEbhtZ5ilo1OiclYWwr1IiWLmBIs6J8QuvH0McvHgy//jneCTLnUGpeP/742T@CwmBnPQB4bxa71RVQq6407XIPSWhh9cCu0Dq7GVAi0g9o3bNk@2I48CA93NiKjm8@nXHYcDWqYUvUP" rel="noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>The termination condition <code>n&gt;c</code> looks wrong but it happens to work out with <code>and/or</code>.</p>
-<h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 43 bytes</h1>
+<h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python 3</a>, 43 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and(n//3==f(1+f(n-1)))+f(n-1)
 </code></pre>
-<p><a href="https://tio.run/##LcqxCoAgFAXQub7C8T0qRCQIwf7FMEuoq4hLX28NbWc4@alngl5yaS3Yy92bdwIGq3LwBCm1tYHUEAiTYuYfLaQiICJEcTh2UjObvsslohLG7zC3Fw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##LcqxCoAgFAXQub7C8T0qRCQIwf7FMEuoq4hLX28NbWc4@alngl5yaS3Yy92bdwIGq3LwBCm1tYHUEAiTYuYfLaQiICJEcTh2UjObvsslohLG7zC3Fw" rel="noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Recursive magic based on the original definition, copied from <a href="https://codegolf.stackexchange.com/a/274930/20260">l4m2's JS answer</a>.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&lt;2?0:!(n/3^f(1+f(--n)))+f(n)
 </code></pre>
@@ -195,13 +211,13 @@ $1$.2
 <p><a href="https://tio.run/##JYpBDsIgEEX3noJlp7SFys4yegIPQdqiGDJjaGNceHeEdPXe/3kv93HbnMJ774mXNWePDXUBR8Ar2XCjPijz0xey57YsZeSxfa1aA9lzEk1YvqgnUWBHXUTKonCamTaO6xD5UZNO@AqoPAwEori7/Tn4yJzqpwxA/gM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Fast, not sure relation between Arnauld's solution</p>
 </div>
-<div id="pu9" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
+<div id="pu10" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,k=1)=&gt;n&lt;k*3?n/k^1?n&amp;&amp;n-k:(n+k)/3|0:f(n,k*3)
 </code></pre>
 <p><a href="https://tio.run/##dcxLCsIwFEDRuavIqCS1NZ9n01CM3YlQaiOa8iJWHLn3iDQjg@NzubfhNSzj43p/1hjOU4zOUqy8lcwe8eBL6JH7k@yxKLD2HcWtZxzeonPfrAQWx4BLmKfdHC7UUUKIYIxwTsQmE/lX1CoyE6WTtDm1iUxGDaykdE77RL9DCZCG2pj4AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
 <pre><code>[3τḣ$⌐⇧~p$ċßṪ3β
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJ+IiwiIiwiWzPPhOG4oyTijJDih6d+cCTEi8Of4bmqM86yIiwiIiwiMCAtPiAwXG4xIC0+IDBcbjIgLT4gMVxuMjYgLT4gMTdcbjI3IC0+IDE4XG41MyAtPiAyNlxuNTQgLT4gMjdcbjEzMzcgLT4gNjg4Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
